# PO-Minigrid

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
po_minigrid/: po_minigrid_env.py
po_minigrid/core/: particles.py  po_grid.py
po_minigrid/envs/: empty.py
po_minigrid/models/: __init__.py  base.py  noise.py  noise_base.py  observation.py  reward.py  transition.py  utils.py
po_minigrid/models/transition/: __init__.py  deterministic.py  noise.py
po_minigrid/utils/: decorate.py  rendering.py
tests/: test_noisy_actions.py  test_particles.py
